@@ -113,6 +113,7 @@ Version 1.4.5 - CVS
   - Move documentation for SquirrelMail developers to doc/Development.
   - Correct slightly inconsistent behaviour when reading a message with MDN
     (#928954).
+  - Fix an off-by-one and a HTML-formatting bug in saved searches.
 
 Version 1.4.4 - 21 January 2005
 -------------------------------
